# kalshi

./: .gitignore  README.md  dashboard.md  dashboard_plan.md  package-lock.json  package.json
mentions/: README.md  briefings_mvp_plan.md  browser_automation.md  mentionsengine.md  pyproject.toml  whitehouse_caption_handoff.md
mentions/examples/: karoline_border_crisis_rule.json
mentions/mentions_engine/: __init__.py  cli.py  config.py  datasets.py  engine.py  http.py  kalshi.py  profiles.py  registry.py  utils.py  whitehouse_markets.py
mentions/mentions_engine/acquisition/: __init__.py  base.py  whitehouse.py
mentions/mentions_engine/analysis/: __init__.py  word_frequencies.py
mentions/mentions_engine/discovery/: __init__.py  base.py  whitehouse.py
mentions/mentions_engine/event_mapping/: __init__.py  base.py  whitehouse.py
mentions/mentions_engine/market_analysis/: __init__.py  base.py  whitehouse.py
mentions/mentions_engine/market_ingest/: __init__.py  base.py  file.py  kalshi.py
mentions/mentions_engine/matcher/: __init__.py  simple.py
mentions/mentions_engine/models/: __init__.py  base.py  decisions.py  events.py  markets.py  outcomes.py  predictions.py  rules.py  transcripts.py
mentions/mentions_engine/outcomes/: __init__.py  base.py  file.py  kalshi.py
mentions/mentions_engine/prediction/: base.py  (+2 more)
mentions/tests/: test_engine.py  test_kalshi_ingestion.py  test_market_parsing.py  test_matcher.py  test_transcript_parser.py  test_whitehouse_acquisition.py  test_whitehouse_discovery.py  test_whitehouse_market_report.py  test_word_frequencies.py
(+26 files in other folders)
