[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mentions-engine"
version = "0.1.0"
description = "Prediction-oriented tooling for Kalshi mention markets"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2024.0.0",
  "youtube-transcript-api>=1.2.4",
]

[tool.setuptools]
packages = [
  "mentions_engine",
  "mentions_engine.models",
  "mentions_engine.storage",
  "mentions_engine.discovery",
  "mentions_engine.acquisition",
  "mentions_engine.transcripts",
  "mentions_engine.rules",
  "mentions_engine.matcher",
  "mentions_engine.market_ingest",
  "mentions_engine.market_analysis",
  "mentions_engine.event_mapping",
  "mentions_engine.outcomes",
  "mentions_engine.prediction",
]
